--- a/debian/mythtv-controller/DEBIAN/control
+++ b/debian/mythtv-controller/DEBIAN/control
@@ -2,15 +2,15 @@ Package: mythtv-controller
 Version: 0.36-1
 Architecture: amd64
 Maintainer: hans <hanshenrik32@gmail.com>
-Installed-Size: 261648
+Installed-Size: 261634
 Section: unknown
 Priority: optional
 Homepage: <insert the upstream URL, if relevant>
 Description: mythtv-controller remote for xbmc/mythtv
  xbmc support.
  New easy debian/ubuntu installation.
- Req. mysql and mythtv ver 0.23/0.24/0.25 and opengl stuf.
- play music from mythtv backend.
+ Req. mysql and mythtv ver 0.23/0.24/0.25 or kodi and opengl stuf.
+ play music from mythtv/kodi backend.
  Stream music over the internet from a mythtv backend server.
  play movies from mythtv/mxbc database
  play recordedtv programs from mythtv/xbmc backend not all.
