--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: hans <hanshenrik32@gmail.com>
 Build-Depends: debhelper (>=9)
 Standards-Version: 3.9.6
-Homepage: <insert the upstream URL, if relevant>
+Homepage: www.hjemmebioklubben.dk
 #Vcs-Git: git://anonscm.debian.org/collab-maint/mythtv-controller.git
 #Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/mythtv-controller.git
 
