tv guide config update 6

--- a/xmltv_config/tv_grab_eu_dotmedia.conf
+++ b/xmltv_config/tv_grab_eu_dotmedia.conf
@@ -3,7 +3,7 @@ cachedir=/home/hans/.xmltv/cache
 channel!1tvrus.com
 channel!360tunebox.spi.pl
 channel!3sat.de
-channel=6-eren.dk
+channel!6-eren.dk
 channel!action.cmore.dk
 channel!action.film.viasat.dk
 channel!adultchannel.co.uk
@@ -23,32 +23,32 @@ channel!bornholm.p4.dr.dk
 channel!br-alpha.daserste.de
 channel!brazzerstveurope.com
 channel!bw.swr.daserste.de
-channel=canal9.dk
-channel=cartoonnetwork.dk
+channel!canal9.dk
+channel!cartoonnetwork.dk
 channel!cbsreality.tv
-channel=charlie.tv2.dk
+channel!charlie.tv2.dk
 channel!classic.uptown.dk
 channel!classic.vh1.se
-channel=cnn.com
-channel=comedycentral.dk
+channel!cnn.com
+channel!comedycentral.dk
 channel!dance.mtv.se
 channel!daserste.de
-channel=discovery.dk
-channel=disneychannel.dk
+channel!discovery.dk
+channel!disneychannel.dk
 channel!dk.eonline.com
-channel=dk4.dk
+channel!dk4.dk
 channel!docubox.spi.pl
-channel=dr1.dr.dk
-channel=dr1hd.dr.dk
-channel=dr2.dr.dk
-channel=dr3.dr.dk
-channel=dr3hd.dr.dk
+channel!dr1.dr.dk
+channel!dr1hd.dr.dk
+channel!dr2.dr.dk
+channel!dr3.dr.dk
+channel!dr3hd.dr.dk
 channel!dw.de
 channel!einsextra.daserste.de
 channel!einsfestival.daserste.de
 channel!emotion.cmore.dk
 channel!en.discovery.dk
-channel=en.tlc.discovery.dk
+channel!en.tlc.discovery.dk
 channel!esbjerg.p4.dr.dk
 channel!esports.viasat.dk
 channel!eu.eonline.com
@@ -191,7 +191,7 @@ channel!phoenixtv.com.cn
 channel!polonia.tvp.pl
 channel!prosieben.de
 channel!protv.ro
-channel=puls.tv3.dk
+channel!puls.tv3.dk
 channel!ramasjang.dr.dk
 channel!rbb.daserste.de
 channel!rbbhd.daserste.de
@@ -207,13 +207,13 @@ channel!series.cmore.dk
 channel!series.viasat.dk
 channel!sf-kanalen.cmore.dk
 channel!sjaelland.p4.dr.dk
-channel=sport.tv2.dk
-channel=sport.tv4.se
-channel=sporthd.tv2.dk
+channel!sport.tv2.dk
+channel!sport.tv4.se
+channel!sporthd.tv2.dk
 channel!sr.swr.daserste.de
 channel!supertv.nrk.no
-channel=svt1.svt.se
-channel=svt2.svt.se
+channel!svt1.svt.se
+channel!svt2.svt.se
 channel!svt24.svt.se
 channel!svt24hd.svt.se
 channel!svtb.svt.se
@@ -225,17 +225,17 @@ channel!toons.nickelodeon.dk
 channel!travelchanneltv.eu
 channel!travelchanneltv.se
 channel!trekanten.p4.dr.dk
-channel=tv2.dk
+channel!tv2.dk
 channel!tv2.no
 channel!tv2bornholm.dk
 channel!tv2fyn.dk
 channel!tv2lorry.dk
 channel!tv2nord.dk
 channel!tv2oj.dk
-channel=tv3.dk
+channel!tv3.dk
 channel!tv3.no
-channel=tv3plus.dk
-channel=tv4.se
+channel!tv3plus.dk
+channel!tv4.se
 channel!tv5monde.org
 channel!tv6.se
 channel!tveast.dk
@@ -260,4 +260,4 @@ channel!world.kbs.co.kr
 channel!xd.disneychannel.dk
 channel!zdf.de
 channel!zebra.tv2.no
-channel=zulu.tv2.dk
+channel!zulu.tv2.dk
