--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: mythtv-controller
 Section: unknown
 Priority: optional
-Maintainer: hans <hanshenrik32@gmail.com>
+Maintainer: Hans-Henrik Grüner-Pedersen <hanshenrik32@gmail.com>
 Build-Depends: xmltv,libical-dev,libglc-dev,libical-dev,unzip,libical-dev,lirc,libsqlite3-dev,libvlc-dev,libxrandr-dev,libxml2-dev
 Standards-Version: 0.37.4
 Homepage: http://www.hjemmebioklubben.dk
@@ -11,11 +11,9 @@ Homepage: http://www.hjemmebioklubben.dk
 Package: mythtv-controller
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: mythtv-controller remote for xbmc/mythtv
- xbmc support.
- New easy debian/ubuntu installation.
- Req. mysql and mythtv ver 0.23/0.24/0.25 and opengl stuf.
- play music from mythtv backend.
- Stream music over the internet from a mythtv backend server.
- play movies from mythtv/mxbc database
- play recordedtv programs from mythtv/xbmc backend not all.
+Description: Touch screen mediacenter.
+ mythtv/kodi support. Tv guide by xmltv graber.
+ Play music from mythtv and kodi backend db.
+ Stream music from 12000 radio statios.
+ Play movies from internal/mythtv/kodi database.
+ Play/record tv soon. 
