--- a/debian/mythtv-controller/DEBIAN/control
+++ b/debian/mythtv-controller/DEBIAN/control
@@ -1,16 +1,14 @@
 Package: mythtv-controller
-Version: 0.36-1
+Version: 0.37.4
 Architecture: all
-Maintainer: hans <hanshenrik32@gmail.com>
-Installed-Size: 2
+Maintainer: Hans-Henrik Grüner-Pedersen <hanshenrik32@gmail.com>
+Installed-Size: 179002
 Section: unknown
 Priority: optional
 Homepage: http://www.hjemmebioklubben.dk
-Description: mythtv-controller remote for xbmc/mythtv
- xbmc support.
- New easy debian/ubuntu installation.
- Req. mysql and mythtv ver 0.23/0.24/0.25 and opengl stuf.
- play music from mythtv backend.
- Stream music over the internet from a mythtv backend server.
- play movies from mythtv/mxbc database
- play recordedtv programs from mythtv/xbmc backend not all.
+Description: Touch screen mediacenter.
+ mythtv/kodi support. Tv guide by xmltv graber.
+ Play music from mythtv and kodi backend db.
+ Stream music from 12000 radio statios.
+ Play movies from internal/mythtv/kodi database.
+ Play/record tv soon.
