--- a/debian/rules
+++ b/debian/rules
@@ -46,6 +46,7 @@ override_dh_auto_configure:
 	#dh_auto_configure -- #	-DCMAKE_LIBRARY_PATH=$(DEB_HOST_MULTIARCH)
 
 clean:
+	-$(MAKE) clean
 	@# Do nothning
 
 build:
@@ -57,10 +58,13 @@ build:
 	@# Do nothning
 
 binary:
-	cp mythtv-controller debian/usr/local/bin
 	if test -e /etc/mythtv-controller.conf; then echo "mythtv-controller config exist. No update"; else cp $(CONFIG_FILE) ${ETCDIR}; fi
-	#cp mythtv-controller.desktop  ~/.local/share/applications
-	cp mythtv-controller.desktop ~/Desktop
-	mkdir -p /usr/share/mythtv-controller/images/radiostations
+	mkdir -p debian/mythtv-controller/usr/share/mythtv-controller
+	mkdir -p debian/mythtv-controller/usr/local/bin
+	mkdir -p debian/mythtv-controller/usr/share/mythtv-controller/images/radiostations
+	cp mythtv-controller debian/mythtv-controller/usr/local/bin
+	cp -r images tema1 tema2 tema3 tema4 tema5 tema6 tema7 tema8 tema9 tema10 debian/mythtv-controller/usr/share/mythtv-controller/
+	cp -r xmltv_config debian/mythtv-controller/usr/share/mythtv-controller/
+	cp mythtv-controller.png fmodstudioapi11011linux.tar.gz debian/usr/share/mythtv-controller/
 	dh_gencontrol
 	dh_builddeb
