--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: mythtv-controller
 Section: unknown
 Priority: optional
 Maintainer: Hans-Henrik Grüner-Pedersen <hanshenrik32@gmail.com>
-Build-Depends: xmltv,libical-dev,libglc-dev,libical-dev,unzip,libical-dev,lirc,libsqlite3-dev,libvlc-dev,libxrandr-dev,libxml2-dev
+Build-Depends: libcurl-ocaml-dev,libdevil-dev,libsdl1.2-dev,libmysqlclient20,mysql-common,libvlc5,libvlccore9,libproxy-tools,libglc0,freeglut3,libdevil1c2,libsdl-image1.2,libical-dev,libsdl-image1.2-dev,dialog,imagemagick,liblircclient-dev,xmltv,libglc-dev,libical-dev,libical-dev,unzip,libical-dev,lirc,libsqlite3-dev,libvlc-dev,libxrandr-dev,libxml2-dev
 Standards-Version: 0.37.4
 Homepage: http://www.hjemmebioklubben.dk
 #Vcs-Git: git://anonscm.debian.org/collab-maint/mythtv-controller.git
