--- a/debian/control
+++ b/debian/control
@@ -2,18 +2,19 @@ Source: mythtv-controller
 Section: unknown
 Priority: optional
 Maintainer: Hans-Henrik Grüner-Pedersen <hanshenrik32@gmail.com>
-Build-Depends: libcurl-ocaml-dev,libdevil-dev,libsdl1.2-dev,libmysqlclient20,mysql-common,libvlc5,libvlccore9,libproxy-tools,libglc0,freeglut3,libdevil1c2,libsdl-image1.2,libical-dev,libsdl-image1.2-dev,dialog,imagemagick,liblircclient-dev,xmltv,libglc-dev,libical-dev,libical-dev,unzip,libical-dev,lirc,libsqlite3-dev,libvlc-dev,libxrandr-dev,libxml2-dev
-Standards-Version: 0.37.4
+Build-Depends: libcurl-ocaml-dev,libdevil-dev,libsdl1.2-dev,libvlc5,libmysqlclient20,libvlccore9,libproxy-tools,libglc0,freeglut3,libdevil1c2,libical-dev,liblircclient-dev,lirc
 Homepage: http://www.hjemmebioklubben.dk
 #Vcs-Git: git://anonscm.debian.org/collab-maint/mythtv-controller.git
 #Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/mythtv-controller.git
 
 Package: mythtv-controller
-Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Architecture: amd64
+Section: unknown
+Depends: ${shlibs:Depends},libvlccore9,libvlc-bin,libvlc5,freeglut3,libdevil1c2,libmysqlclient20,lirc
 Description: Touch screen mediacenter.
  mythtv/kodi support. Tv guide by xmltv graber.
  Play music from mythtv and kodi backend db.
  Stream music from 12000 radio statios.
  Play movies from internal/mythtv/kodi database.
  Play/record tv soon. 
+Homepage: http://www.hjemmebioklubben.dk
