text fix in stream and radio view

--- a/debian/rules
+++ b/debian/rules
@@ -69,6 +69,10 @@ binary:
 	cp mythtv-controller debian/mythtv-controller/usr/local/bin
 	cp -r images tema1 tema2 tema3 tema4 tema5 tema6 tema7 tema8 tema9 tema10 debian/mythtv-controller/usr/share/mythtv-controller/
 	cp -r xmltv_config debian/mythtv-controller/usr/share/mythtv-controller/
+	# icon
+	cp mythtv-controller.desktop debian/usr/share/applications/
+	cp mythtv-controller.desktop debian/usr/share/icons/hicolor/48x48/apps/
+	# sound system fmod
 	cp mythtv-controller.png fmodstudioapi11011linux.tar.gz debian/mythtv-controller/usr/share/mythtv-controller/
 	chmod 644 debian/mythtv-controller/usr/share/mythtv-controller/fmodstudioapi11011linux.tar.gz
 	chmod -R 644 debian/mythtv-controller/usr/share/mythtv-controller/fmodstudioapi11011linux/*
