--- a/debian/rules
+++ b/debian/rules
@@ -34,7 +34,7 @@ LIRCSOURCES := $(shell find /usr/lib/ -name 'liblirc_client.so')
 LIBFMOD    = /usr/share/mythtv-controller/fmodstudioapi11011linux/api/lowlevel/lib/x86_64/libfmod.so
 LIBS = -lX11 -lglut -lGLU -lm -lIL -lSDL `sdl-config --libs` -lSDL_image -lpthread -lxml2
 OPTS = -I "/usr/include/GL" -I"/usr/include/libical"  -I"/usr/local/include/fmodex/" -I"/usr/include/lirc" -I"/usr/local/include" -I"/usr/include/SDL/" -I"/usr/local/lib/" -I"/usr/lib" -I"/usr/include/mysql" -I/usr/include/GL/ -L/usr/X11R6/lib  -L"/usr/lib" -L"/usr/lib/mysql" -L"/usr/lib/vlc" -lmysqlclient $(LIRCSOURCES) $(LIBICAL) $(LIBFMOD) $(STDCLIB) $(GLLIB) $(LIBGL) -lsqlite3 -lvlc -lfontconfig $(FREETYPELIB) $(LIBGLC) -lXrandr -I/usr/include/libxml2
-SRCS = main.cpp myctrl_readwebfile.cpp myctrl_stream.cpp myctrl_music.cpp myctrl_mplaylist.cpp myctrl_radio.cpp myth_setupsql.cpp  myctrl_recorded.cpp myctrl_movie.cpp myctrl_tvprg.cpp myth_setup.cpp utility.cpp readjpg.cpp loadpng.cpp myth_saver.cpp myth_picture.cpp myth_ttffont.cpp checknet.cpp dds_loader.cpp myctrl_xbmc.cpp myth_vlcplayer.cpp myctrl_spotify.cpp ../mongoose-master/mongoose.c
+SRCS = main.cpp myctrl_readwebfile.cpp myctrl_stream.cpp myctrl_music.cpp myctrl_mplaylist.cpp myctrl_radio.cpp myth_setupsql.cpp  myctrl_recorded.cpp myctrl_movie.cpp myctrl_tvprg.cpp myth_setup.cpp utility.cpp readjpg.cpp loadpng.cpp myth_saver.cpp myth_picture.cpp myth_ttffont.cpp checknet.cpp dds_loader.cpp myctrl_xbmc.cpp myth_vlcplayer.cpp myctrl_spotify.cpp mongoose-master/mongoose.c
 
 %:
 	dh $@ 
@@ -78,9 +78,9 @@ binary:
 	chmod 644 debian/mythtv-controller/usr/share/mythtv-controller/mongoose-master.zip
 	chmod -R 644 debian/mythtv-controller/usr/share/mythtv-controller/fmodstudioapi11011linux/*
 	tar -C debian/mythtv-controller/usr/share/mythtv-controller/ -zxf fmodstudioapi11011linux.tar.gz fmodstudioapi11011linux/api/
-	unzip mongoose-master -d debian/mythtv-controller/usr/share/mythtv-controller/
-	if [ -h "debian/mythtv-controller/usr/lib/libfmod.so.10" ]; then rm debian/mythtv-controller/usr/lib/libfmod.so.10; fi
-	ln -s  /usr/share/mythtv-controller/fmodstudioapi11011linux/api/lowlevel/lib/x86_64/libfmod.so.10.11 debian/mythtv-controller/usr/lib/libfmod.so.10
+	unzip -n mongoose-master -d debian/mythtv-controller/usr/share/mythtv-controller/
+	if [ -L debian/mythtv-controller/usr/lib/libfmod.so.10 ]; then rm debian/mythtv-controller/usr/lib/libfmod.so.10; fi
+	ln -s /usr/share/mythtv-controller/fmodstudioapi11011linux/api/lowlevel/lib/x86_64/libfmod.so.10.11 debian/mythtv-controller/usr/lib/libfmod.so.10
 	chown root:root -R debian/mythtv-controller/usr/share/mythtv-controller/fmodstudioapi11011linux/*
 	dh_gencontrol
 	dh_installdeb
