--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Homepage: http://www.hjemmebioklubben.dk
 Package: mythtv-controller
 Architecture: amd64
 Section: unknown
-Depends: ${shlibs:Depends},libvlccore9,libvlc-bin,libvlc5,libglewmx1.13,libglc0,freeglut3,libsdl-image1.2,libdevil1c2,libmysqlclient20,lirc,liballegro4.4,libftdi1-2,libmng2,libportaudio2,libproxy-tools,libsdl1.2debian,libusb-0.1-4,mysql-common,xmltv,libcurl4
+Depends: ${shlibs:Depends},libvlccore9,libvlc-bin,libvlc5,libglewmx1.13,libglc0,freeglut3,libsdl-image1.2,libdevil1c2,libmysqlclient20,liballegro4.4,libftdi1-2,libmng2,libportaudio2,libproxy-tools,libsdl1.2debian,libusb-0.1-4,mysql-common,xmltv,libcurl4
 Installed-Size: 30000
 Description: Touch screen mediacenter.
  mythtv/kodi support. Tv guide by xmltv graber.
