--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: mythtv-controller
-Section: unknown
+Section: video
 Priority: optional
 Maintainer: Hans-Henrik Grüner-Pedersen <hanshenrik32@gmail.com>
 Build-Depends: libcurl-ocaml-dev,libdevil-dev,libsdl1.2-dev,libvlc5,libmysqlclient20,libvlccore9,libproxy-tools,libglc0,freeglut3,libdevil1c2,libical-dev,liblircclient-dev,libcurl4
@@ -9,7 +9,8 @@ Homepage: http://www.hjemmebioklubben.dk
 
 Package: mythtv-controller
 Architecture: amd64
-Section: unknown
+Section: video
+Version: 0.38.1
 Depends: ${shlibs:Depends},libvlccore9,libvlc-bin,libvlc5,libglewmx1.13,libglc0,freeglut3,libsdl-image1.2,libdevil1c2,libmysqlclient20,liballegro4.4,libftdi1-2,libmng2,libportaudio2,libproxy-tools,libsdl1.2debian,libusb-0.1-4,mysql-common,xmltv,libcurl4
 Installed-Size: 30000
 Description: Touch screen mediacenter.
