--- a/debian/mythtv-controller/DEBIAN/control
+++ b/debian/mythtv-controller/DEBIAN/control
@@ -2,14 +2,15 @@ Package: mythtv-controller
 Version: 0.38-1
 Architecture: amd64
 Maintainer: Hans-Henrik Grüner-Pedersen <hanshenrik32@gmail.com>
-Installed-Size: 386605
+Installed-Size: 277013
 Depends: libvlccore9, libvlc-bin, libvlc5, libglewmx1.13, libglc0, freeglut3, libsdl-image1.2, libdevil1c2, libmysqlclient20, liballegro4.4, libftdi1-2, libmng2, libportaudio2, libproxy-tools, libsdl1.2debian, libusb-0.1-4, mysql-common, xmltv, libcurl4
 Section: video
 Priority: optional
 Homepage: http://www.hjemmebioklubben.dk
 Description: Touch screen mediacenter.
  mythtv/kodi support. Tv guide by xmltv graber.
- Play music from mythtv and kodi backend db.
+ Import music db from mythtv and kodi backend db.
  Stream music from 12000 radio statios.
+ Play music from spotify
  Play movies from internal/mythtv/kodi database.
  Play/record tv soon.
