--- a/debian/rules
+++ b/debian/rules
@@ -17,7 +17,7 @@ EXECUTABLE = mythtv-controller
 CONFIG_FILE= mythtv-controller.conf
 DESTDIR    = /usr/share/mythtv-controller
 DESTDIRBIN = /usr/local/bin
-DESTIMG    = /usr/share/mythtv-controller/images
+DESTIMG    = /opt/mythtv-controller/images
 DESTLIBDIR = /usr/local/lib
 DESTHDRDIR = /usr/local/include/fmodex
 ETCDIR     = /etc
@@ -31,10 +31,10 @@ LIBGL:=$(shell find /usr/lib/ -name 'libGL.so')
 LIBGLC:=$(shell find /usr/lib/ -name 'libGLC.so')
 LIBICAL:=$(shell find /usr/lib/ -name 'libical.so')
 LIRCSOURCES := $(shell find /usr/lib/ -name 'liblirc_client.so')
-LIBFMOD    = /usr/share/mythtv-controller/fmodstudioapi11011linux/api/lowlevel/lib/x86_64/libfmod.so
-LIBS = -lX11 -lglut -lGLU -lm -lIL -lSDL `sdl-config --libs` -lSDL_image -lpthread -lxml2 -lcurl
+LIBFMOD    = /opt/mythtv-controller/fmodstudioapi11014linux/api/lowlevel/lib/x86_64/libfmod.so
+LIBS = -lX11 -lglut -lGLU -lm -lIL -lSDL `sdl-config --libs` -lSDL_image -lpthread -lxml2 -lcurl -lOpenGL
 OPTS = -I "/usr/include/GL" -I"/usr/include/libical"  -I"/usr/local/include/fmodex/" -I"/usr/include/lirc" -I"/usr/local/include" -I"/usr/include/SDL/" -I"/usr/local/lib/" -I"/usr/lib" -I"/usr/include/mysql" -I/usr/include/GL/ -L/usr/X11R6/lib  -L"/usr/lib" -L"/usr/lib/mysql" -L"/usr/lib/vlc" -lmysqlclient $(LIRCSOURCES) $(LIBICAL) $(LIBFMOD) $(STDCLIB) $(GLLIB) $(LIBGL) -lsqlite3 -lvlc -lfontconfig $(FREETYPELIB) $(LIBGLC) -lXrandr -I/usr/include/libxml2
-SRCS = main.cpp myctrl_readwebfile.cpp myctrl_stream.cpp myctrl_music.cpp myctrl_mplaylist.cpp myctrl_radio.cpp myth_setupsql.cpp  myctrl_recorded.cpp myctrl_movie.cpp myctrl_tvprg.cpp myth_setup.cpp utility.cpp readjpg.cpp loadpng.cpp myth_saver.cpp myth_picture.cpp myth_ttffont.cpp checknet.cpp dds_loader.cpp myctrl_xbmc.cpp myth_vlcplayer.cpp myctrl_spotify.cpp mongoose-master/mongoose.c json-parser/json.c
+SRCS = main.cpp myctrl_readwebfile.cpp myctrl_stream.cpp myctrl_music.cpp myctrl_mplaylist.cpp myctrl_radio.cpp myth_setupsql.cpp  myctrl_recorded.cpp myctrl_movie.cpp myctrl_tvprg.cpp myth_setup.cpp utility.cpp readjpg.cpp loadpng.cpp myth_saver.cpp myth_picture.cpp myth_ttffont.cpp checknet.cpp dds_loader.cpp myctrl_xbmc.cpp myth_vlcplayer.cpp myctrl_spotify.cpp myctrl_tidal.cpp mongoose-master/mongoose.c json-parser/json.c
 
 %:
 	dh $@ 
@@ -59,30 +59,26 @@ build:
 
 binary:
 	cp $(CONFIG_FILE) debian/mythtv-controller/etc
-	mkdir -p debian/mythtv-controller/usr/share/mythtv-controller
-	chmod 755 debian/mythtv-controller/usr/share/mythtv-controller
-	mkdir -p debian/mythtv-controller/usr/local/bin
-	chmod 755 debian/mythtv-controller/usr/local/bin
-	mkdir -p debian/mythtv-controller/usr/lib
-	chmod 755 debian/mythtv-controller/usr/lib
-	mkdir -p debian/mythtv-controller/usr/share/mythtv-controller/images/radiostations
+	mkdir -p debian/mythtv-controller/opt/mythtv-controller
+	chmod 755 debian/mythtv-controller/opt/mythtv-controller
+	mkdir -p debian/mythtv-controller/opt/mythtv-controller/images/radiostations
 	cp mythtv-controller debian/mythtv-controller/usr/bin
-	cp -r images tema1 tema2 tema3 tema4 tema5 tema6 tema7 tema8 tema9 tema10 debian/mythtv-controller/usr/share/mythtv-controller/
-	cp -r xmltv_config debian/mythtv-controller/usr/share/mythtv-controller/
+	cp -r images tema1 tema2 tema3 tema4 tema5 tema6 tema7 tema8 tema9 tema10 debian/mythtv-controller/opt/mythtv-controller/
+	cp -r xmltv_config debian/mythtv-controller/opt/mythtv-controller/
 	# icon
 	cp mythtv-controller.desktop debian/usr/share/applications/
 	cp mythtv-controller.desktop debian/usr/share/icons/hicolor/48x48/apps/
 	# sound system fmod
-	cp mythtv-controller.png fmodstudioapi11014linux.tar.gz mongoose-master.zip debian/mythtv-controller/usr/share/mythtv-controller/
-	@chmod 644 debian/mythtv-controller/usr/share/mythtv-controller/fmodstudioapi11014linux.tar.gz
-	@chmod 644 debian/mythtv-controller/usr/share/mythtv-controller/mongoose-master.zip
-	@chmod -R 644 debian/mythtv-controller/usr/share/mythtv-controller/fmodstudioapi11014linux/*
-	@tar -C debian/mythtv-controller/usr/share/mythtv-controller/ -zxf fmodstudioapi11014linux.tar.gz fmodstudioapi11014linux/api/
-	@unzip -n mongoose-master -d debian/mythtv-controller/usr/share/mythtv-controller/
-	@tar -zxvf json-parser.tar.gz -C debian/mythtv-controller/usr/share/mythtv-controller/ json-parser/json.c json-parser/json.h
+	cp mythtv-controller.png fmodstudioapi11014linux.tar.gz mongoose-master.zip debian/mythtv-controller/opt/mythtv-controller/
+	@chmod 644 debian/mythtv-controller/opt/mythtv-controller/fmodstudioapi11014linux.tar.gz
+	@chmod 644 debian/mythtv-controller/opt/mythtv-controller/mongoose-master.zip
+	@chmod -R 644 debian/mythtv-controller/opt/mythtv-controller/fmodstudioapi11014linux/*
+	@tar -C debian/mythtv-controller/opt/mythtv-controller/ -zxf fmodstudioapi11014linux.tar.gz fmodstudioapi11014linux/api/
+	@unzip -n mongoose-master -d debian/mythtv-controller/opt/mythtv-controller/
+	@tar -zxvf json-parser.tar.gz -C debian/mythtv-controller/opt/mythtv-controller/ json-parser/json.c json-parser/json.h
 	@if [ -L debian/mythtv-controller/usr/lib/libfmod.so.10 ]; then rm debian/mythtv-controller/usr/lib/libfmod.so.10; fi
 	@ln -s /usr/share/mythtv-controller/fmodstudioapi11014linux/api/lowlevel/lib/x86_64/libfmod.so.10.14 debian/mythtv-controller/usr/lib/libfmod.so.10
-	@chown root:root -R debian/mythtv-controller/usr/share/mythtv-controller/fmodstudioapi11014linux/*
+	@chown root:root -R debian/mythtv-controller/opt/mythtv-controller/fmodstudioapi11014linux/*
 	# create random password
 	#PASSWDDB="$(openssl rand -base64 12)"
 	PASSWDDB="qwerty123"
