--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: mythtv-controller
 Section: video
 Priority: optional
 Maintainer: Hans-Henrik Grüner-Pedersen <hanshenrik32@gmail.com>
-Build-Depends: libcurl-ocaml-dev,libdevil-dev,libsdl1.2-dev,libvlc5,libmysqlclient20,libvlccore9,libproxy-tools,libglc0,freeglut3,libdevil1c2,libical-dev,liblircclient-dev,libcurl4
+Build-Depends: libdevil-dev,libsdl1.2-dev,libvlc5,libmysqlclient20,libvlccore9,libproxy-tools,libglc0,freeglut3,libdevil1c2,libical-dev,liblircclient-dev,libcurl4
 Homepage: http://www.hjemmebioklubben.dk
 #Vcs-Git: git://anonscm.debian.org/collab-maint/mythtv-controller.git
 #Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/mythtv-controller.git
