--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,5 @@
 AUTOMAKE_OPTIONS = foreign
 bin_PROGRAMS = mythtv-controller
-mythtv_controller_SOURCES = main.cpp
+mythtv_controller_SOURCES = main.cpp myctrl_readwebfile.cpp myctrl_stream.cpp myctrl_music.cpp myctrl_mplaylist.cpp myctrl_radio.cpp myth_setupsql.cpp  myctrl_recorded.cpp myctrl_movie.cpp myctrl_tvprg.cpp myth_setup.cpp 
+
+
