--- a/ccpp.yml
+++ b/ccpp.yml
@@ -13,12 +13,12 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y libkrb5-dev
+        sudo apt install -y libkrb5-dev curl xmltv libvlc-dev lirc
     - name: configure
       run: |
         ./configure
-    - name: make
-      run: make
+    - name: make compile
+      run: make compile
     - name: make compile
       run: make compile
 
