--- a/ccpp.yml
+++ b/ccpp.yml
@@ -9,9 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Install dependencies
       run: |
+        ls ${{ github.workspace }}
         sudo apt update
         sudo apt install -y libkrb5-dev curl xmltv libvlc-dev lirc glutg3-dev libsdl1.2-dev libsdl-image1.2-dev libsdl2-dev
         tar -zxvf fmodstudioapi20107linux.tar.gz
