--- a/ccpp.yml
+++ b/ccpp.yml
@@ -1,6 +1,6 @@
 name: C/C++ CI
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build-linux:
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v1
     - name: Install dependencies
       run: |
         ls ${{ github.workspace }}
@@ -17,6 +17,7 @@ jobs:
         sudo apt install -y libkrb5-dev curl xmltv libvlc-dev lirc glutg3-dev libsdl1.2-dev libsdl-image1.2-dev libsdl2-dev
     - name: make
       run: |
+        ls -l
         make installsound
         make compile
 
