--- a/ccpp.yml
+++ b/ccpp.yml
@@ -13,8 +13,8 @@ jobs:
     - name: Install dependencies
       run: |
         ls ${{ github.workspace }}
-        sudo apt update
-        sudo apt install -y libkrb5-dev curl xmltv libvlc-dev lirc glutg3-dev libsdl1.2-dev libsdl-image1.2-dev libsdl2-dev
+        apt update
+        apt install -y libkrb5-dev curl xmltv libvlc-dev lirc glutg3-dev libsdl1.2-dev libsdl-image1.2-dev libsdl2-dev
     - name: make
       run: |
         ls -l
