--- a/ccpp.yml
+++ b/ccpp.yml
@@ -14,7 +14,8 @@ jobs:
       run: |
         ls ${{ github.workspace }}
         apt update
-        apt install -y libkrb5-dev curl xmltv libvlc-dev lirc glutg3-dev libsdl1.2-dev libsdl-image1.2-dev libsdl2-dev
+        apt install -y libkrb5-dev curl xmltv libvlc-dev lirc glutg3-dev libsdl1.2-dev libsdl-image1.2-dev libsdl1.2-dev libsdl-image1.2-dev libsdl-ttf2.0-dev libsdl-mixer1.2-dev libportmidi-dev
+
     - name: make
       run: |
         ls -l
