--- a/ccpp.yml
+++ b/ccpp.yml
@@ -10,12 +10,14 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
+    - uses: mstksg/get-package@v1
     - name: Install dependencies
+      with:
+        apt-get: libkrb5-dev curl xmltv libvlc-dev lirc glutg3-dev libsdl1.2-dev libsdl-image1.2-dev libsdl1.2-dev libsdl-image1.2-dev libsdl-ttf2.0-dev libsdl-mixer1.2-dev libportmidi-dev
       run: |
         ls ${{ github.workspace }}
         apt update
         apt install -y libkrb5-dev curl xmltv libvlc-dev lirc glutg3-dev libsdl1.2-dev libsdl-image1.2-dev libsdl1.2-dev libsdl-image1.2-dev libsdl-ttf2.0-dev libsdl-mixer1.2-dev libportmidi-dev
-
     - name: make
       run: |
         ls -l
