--- a/ccpp.yml
+++ b/ccpp.yml
@@ -20,7 +20,7 @@ jobs:
         apt install -y libkrb5-dev curl xmltv libvlc-dev lirc glutg3-dev libsdl1.2-dev libsdl-image1.2-dev libsdl1.2-dev libsdl-image1.2-dev libsdl-ttf2.0-dev libsdl-mixer1.2-dev libportmidi-dev
     - name: make
       run: |
-        ls -l
+        ./apt-get_20.04.sh
         make installsound
         make gitcompile
 
