--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -12,7 +12,7 @@ jobs:
     - name: configure
       run: ./configure
     - name: make
-      run: make compile
+      run: make gitcompile
     - name: make check
       run: make check
     - name: make distcheck
