--- a/ccpp.yml
+++ b/ccpp.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: mstksg/get-package@v1
+    - uses: openrndr/setup-opengl@v1.1
     - name: Install dependencies
       with:
         apt-get: libkrb5-dev curl xmltv libvlc-dev lirc glutg3-dev libsdl1.2-dev libsdl-image1.2-dev libsdl-ttf2.0-dev libsdl-mixer1.2-dev libportmidi-dev libical-dev dialog libxrandr-dev
