--- a/ccpp.yml
+++ b/ccpp.yml
@@ -28,4 +28,7 @@ jobs:
     - name: make check
       run: |
         make ./configure
+
+    - name: make distcheck
+        LIBGL: /usr/lib/x86_64-linux-gnu/libGL.so
 ~
