--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ project(mythtv-controller
   DESCRIPTION
     "Very nice project"
   LANGUAGES
-    CXX
+    C CXX
 )
+# Include the directory itself as a path to include directories
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+#add_library(json-parser STATIC json-parser/json.c json-parser/json.c)
 add_executable(mythtv-controller main.cpp)
