--- a/json-parser/configure.ac
+++ b/json-parser/configure.ac
@@ -22,9 +22,7 @@ fi
 
 AC_SUBST(VERSION_MAJOR, $VERSION_MAJOR)
 
-AC_CONFIG_FILES([
-                 Makefile
-                 json-parser.pc])
+AC_CONFIG_FILES([Makefile])
 
 AC_OUTPUT
 
